<resources>
    <string name="app_name" translatable="false">Karbon</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="title_activity_batch_replacement">BatchReplacement</string>
    <string name="ni">This feature is not implemented</string>
    <string name="unsupported_contnt">Unsupported content</string>
    <string name="null_contnt">Error: Content is null</string>
    <string name="restart_required">Restart Required</string>
    <string name="save">File saved</string>
    <string name="saveAll">saved all files</string>
    <string name="save_label">Save</string>
    <string name="ww_wait">Please wait for word wrap to complete</string>
    <string name="theme_not_found_err">theme file not found please reinstall the Xed Editor or clear app data</string>
    <string name="open_file_or_folder">Open File or Folder</string>
    <string name="open_file">Open a File</string>
    <string name="open_directory">Open a Directory</string>
    <string name="new_file">New File</string>
    <string name="newFile_hint">Name eg. Test.txt</string>
    <string name="mime">MimeType eg. text/plain</string>
    <string name="rep">Replacement</string>
    <string name="searck_keyword">Search Keyword</string>
    <string name="cs">Case Sensitive</string>
    <string name="wait">Please wait…</string>
    <string name="report_issue">Report Issue</string>
    <string name="copy">Copy</string>
    <string name="save_all">Save All</string>
    <string name="save_1">Save</string>
    <string name="undo">Undo</string>
    <string name="settings">Settings</string>
    <string name="print">Print</string>
    <string name="batch_replacement">Batch Replacement</string>
    <string name="search">Search</string>
    <string name="go_next">Go Next</string>
    <string name="go_prev">Go Prev.</string>
    <string name="close_search">Close Search</string>
    <string name="replace">Replace</string>
    <string name="share">Share</string>
    <string name="reselect">Reselect</string>
    <string name="openfile">OpenFile</string>
    <string name="new_folder">New Folder</string>
    <string name="new_file_1">New File</string>
    <string name="rename">Rename</string>
    <string name="open_with">Open With…</string>
    <string name="save_as">Save as</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="close_this">Close this</string>
    <string name="close_others">Close others</string>
    <string name="close_all">Close all</string>
    <string name="insertdate">Insert Date</string>
    <string name="close">Close</string>
    <string name="unsaved">Unsaved Files</string>
    <string name="unsavedfiles">You have unsaved files!</string>
    <string name="cancel">Cancel</string>
    <string name="saveexit">Save and Exit</string>
    <string name="exit">Exit</string>
    <string name="rr">Restart Required</string>
    <string name="rapply">Please restart to apply settings</string>
    <string name="oled">Black Night Theme</string>
    <string name="ww">Word Wrap</string>
    <string name="keepdl">Keep Drawer Locked</string>
    <string name="restart">Restart</string>
    <string name="plugin">Plugins</string>
    <string name="mp">Manage Plugins</string>
    <string name="ap">Available Plugins</string>
    <string name="nip">No Installed Plugins</string>
    <string name="refresh">Refresh</string>
    <string name="dir_example">Name eg. Test</string>
    <string name="create">Create</string>
    <string name="ask_enter_name">Please enter a name</string>
    <string name="already_exists">A file/folder already exist with this name</string>
    <string name="attention">Attention</string>
    <string name="ask_del">Are you sure you want to delete</string>
    <string name="redir">Please reselect the directory</string>
    <string name="canthandle">No app found to handle the file</string>
    <string name="clipboardempty">Clipboard is empty</string>
    <string name="terminal">Terminal</string>
    <string name="add_file">Add File</string>
    <string name="keyword_regex">keyword (Regex)</string>
    <string name="replaceall">ReplaceAll</string>
    <string name="add_new_replacement_batch">Add new replacement batch</string>
    <string name="remove_a_search_batch">remove a search batch</string>
    <string name="replacement">replacement</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="plugin_icon">Plugin Icon</string>
    <string name="download">Download</string>
    <string name="git">Git</string>
    <string name="cred">Credentials</string>
    <string name="inavalid_git_cred">Credentials are not valid. Change them in settings</string>
    <string name="gitcred">Credentials for git</string>
    <string name="repo_dir">Repository folder</string>
    <string name="clone_dir">Folder for cloning repositories</string>
    <string name="dir_exist_not">Folder does not exists</string>
    <string name="file_exist_not">File no longer exists</string>
    <string name="gitKeyExample">eg. SuperKek:ghp_…</string>
    <string name="file_saved">File Saved</string>
    <string name="gituserexample">eg. UserDev:example@email.com</string>
    <string name="apply">Apply</string>
    <string name="userdata">User data</string>
    <string name="inavalid_userdata">User data is not valid. Change it in settings</string>
    <string name="userdatagit">User data for git</string>
    <string name="open_in_terminal">Open In Terminal</string>
    <string name="open_dir_in_terminal">Open Directory in Terminal</string>
    <string name="file_open_denied">Opening this file with other apps is not permitted</string>
    <string name="reload_file_tree">Reload File File</string>
    <string name="close_current_project">Close current project</string>
    <string name="rename_descript">Rename the selected file/folder</string>
    <string name="open_with_other">Open selected file in other apps</string>
    <string name="delete_descript">Delete selected file/folder</string>
    <string name="add_file_desc">Select a new file to be added here</string>
    <string name="create_new_file_desc">Create a new file under selected folder</string>
    <string name="paste_desc">Paste selected file/folder</string>
    <string name="clipboard_empty">File Clipboard is empty</string>
    <string name="save_desc">Save the selected file somewhere else</string>
    <string name="copy_desc">Copy selected file/folder</string>
    <string name="failed_move">Failed to move file</string>
    <string name="file_name">File name</string>
    <string name="ff_path">File or folder path</string>
    <string name="path">Path</string>
    <string name="open">Open</string>
    <string name="enter_path">Please enter a path</string>
    <string name="invalid_path">Path does not exist</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="wait_download">Please wait while the files are being downloaded.</string>
    <string name="done">Success</string>
    <string name="git_branch">Branch. Example: main</string>
    <string name="git_commit_msg">Commit message</string>
    <string name="push">Push</string>
    <string name="pull">Pull</string>
    <string name="pull_desc">Sync local repository with remote repository</string>
    <string name="commit_push">Commit and push</string>
    <string name="push_desc">Create a commit and push changes to the remote repository"</string>
    <string name="fill_both">Please fill in both fields</string>
    <string name="pushing">Pushing to remote repository…</string>
    <string name="nogit">Error: .git folder not found</string>
    <string name="manage_storage">Manage Storage</string>
    <string name="manage_storage_reason">App needs access to edit files in your storage. Please allow the access in the upcoming system setting.</string>
    <string name="ok">OK</string>
    <string name="data_clear">App data is cleared</string>
    <string name="action_done">Action Completed</string>
    <string name="clone_repo">Clone repository</string>
    <string name="exists">already exists!</string>
    <string name="plugin_dir">Plugins Directory</string>
    <string name="private_files">Private Files</string>
    <string name="private_files_desc">Private Files of Karbon</string>
    <string name="cloning">Cloning repository…</string>
    <string name="clone_err">Repository is private. or Check your credentials</string>
    <string name="err">Error</string>
    <string name="open_dir_desc">Choose a directory as a project</string>
    <string name="open_file_desc">Choose a file to directly edit it</string>
    <string name="open_path">Internal Storage</string>
    <string name="open_path_desc">Open internal storage</string>
    <string name="clone_repo_desc">Clone repository using Git</string>
    <string name="add">Add</string>
    <string name="already_opened">File already opened</string>
    <string name="open_cant">Cannot open more than</string>
    <string name="files">Files</string>
    <string name="manage_plugins">Manage Plugins</string>
    <string name="installed">Installed</string>
    <string name="available">Available</string>
    <string name="already_installed">Already Installed</string>
    <string name="download_sure">Are you sure you want to download</string>
    <string name="yes">Yes</string>
    <string name="downloading_plugin">Downloading plugin</string>
    <string name="download_done">Successfully Downloaded.</string>
    <string name="plugin_download_failed">Unable to downloaded plugin</string>
    <string name="fetch_failed">fetch request returned null</string>
    <string name="app">Application</string>
    <string name="oled_desc">Pure Black theme for amoled devices</string>
    <string name="themes">Themes</string>
    <string name="change_theme">Change Theme</string>
    <string name="editor">Editor</string>
    <string name="smooth_tabs">Smooth Tabs</string>
    <string name="smooth_tab_desc">Smoothly switch between tabs</string>
    <string name="ww_desc">Enable Word Wrap in all editors</string>
    <string name="drawer_lock_desc">Keep drawer locked when opening a file</string>
    <string name="diagonal_scroll">Diagonal Scrolling</string>
    <string name="diagonal_scroll_desc">Enable Diagonal Scrolling in File Tree</string>
    <string name="cursor_anim">Cursor Animation</string>
    <string name="cursor_anim_desc">Enable Smooth Cursor Animations</string>
    <string name="show_line_number">Show Line Numbers</string>
    <string name="pin_line_number">Pin Line Numbers</string>
    <string name="extra_keys">Extra Keys</string>
    <string name="extra_keys_desc">Show extra keys in the editor</string>
    <string name="auto_save">Auto Save</string>
    <string name="auto_save_desc">automatically save file</string>
    <string name="auto_save_time">Auto Save Time</string>
    <string name="auto_save_time_desc">automatically save file after specified time</string>
    <string name="intervalinMs">Interval in milliseconds</string>
    <string name="inavalid_v">Invalid value</string>
    <string name="v_small">Value too small</string>
    <string name="v_large">Value too large</string>
    <string name="text_size">Text Size</string>
    <string name="text_size_desc">Set text size</string>
    <string name="tab_size">Tab Size</string>
    <string name="tab_size_desc">Set tab size</string>
    <string name="monet">Dynamic Colors</string>
    <string name="monet_desc">Use device theme in app.</string>
    <string name="restart_app">Please restart the application.</string>
    <string name="old_android">Unsupported Android version</string>
    <string name="app_desc">General settings for the application</string>
</resources>